<resources>
    <string name="app_name">lets-Raw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="app_label">lets-raw</string>
    <string name="search_hint">search for books to read</string>
    <string name="special_book_tag">BEST SELLER</string>
    <string name="special_book_title">L\'ART DE LA GUERRE</string>
    <string name="special_book_author">William Shakespeare</string>
    <string name="hp_book_item_title">L\'ART DE LA GUERRE</string>
    <string name="hp_continue_reading_title">L\'ART DE LA GUERRE</string>
    <string name="hp_continue_reading_author">WILLIAM SHAKESPEAR</string>
    <string name="lp_book_title">Harry potter and the prison of Azkaban</string>
    <string name="lp_book_author">J.K Rowling</string>
    <string name="cp_created_book_author">William shapespear</string>
    <string name="cp_created_book_title">L\'ART DE LA GUERRE</string>
    <string name="cp_created_book_nb_pages">100</string>
    <string name="book_details_title">TITLE</string>
    <string name="book_details_author">AUTHOR</string>
    <string name="book_reader_content">This is where the book content will be displayed.</string>
</resources>