<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/hp_continue_reading_layout_background"
    android:orientation="horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cp_created_books_cover"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/lart_de_la_guerre"
        app:shapeAppearanceOverlay="@style/RoundedCorners"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="152dp"
        android:layout_margin="20dp">

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cp_created_books_author"
            android:id="@+id/cp_created_book_title"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_extra_bold"
            android:text="@string/cp_created_book_title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cp_created_books_author"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_extra_bold"
            android:maxLines="1"
            android:text="@string/cp_created_book_author"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cp_created_book_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cp_created_book_nb_pages_text"/>

        <TextView
            android:id="@+id/cp_created_book_nb_pages_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_extra_bold"
            android:text="Number of pages: "
            android:textColor="?attr/colorOnPrimary"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/cp_created_books_author"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cp_created_book_nb_pages_number"
            />

        <TextView
            android:id="@+id/cp_created_book_nb_pages_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cp_created_book_nb_pages"
            android:fontFamily="@font/roboto_extra_bold"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/cp_created_books_author"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cp_created_book_nb_pages_text"
            app:layout_constraintEnd_toEndOf="parent"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>