<?xml version="1.0" encoding="utf-8"?>

<!-- Home page fragment -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FirstFragment"
    android:orientation="vertical"
    android:background="?attr/background"
    android:layout_centerInParent="true">

    <SearchView
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar_background"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/special_book_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/best_seller_card_background"
        android:layout_margin="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView2"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/lart_de_la_guerre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedCorners" />

        <TextView
            android:id="@+id/book_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/tag_background"
            android:fontFamily="@font/roboto_extra_bold"
            android:text="@string/special_book_tag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/book_title"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:fontFamily="@font/roboto_extra_bold"
            android:text="@string/special_book_title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_tag" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginHorizontal="30dp"
            android:paddingHorizontal="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/special_book_author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_page_trending_rv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:background="?attr/colorPrimary"
        android:padding="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_page_continue_reading_rv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:padding="10dp"/>


</LinearLayout>

